--- a/22.3-guess-my-letter/styles/style.css
+++ b/22.3-guess-my-letter/styles/style.css
@@ -23,3 +23,15 @@ input {
   border: 3px solid black;
   padding: 1rem;
 }
+
+.user-message {
+  color: green;
+}
+
+.red {
+  color: red;
+}
+
+.play-again {
+  display: none;
+}
